--- a/css/donate.css
+++ b/css/donate.css
@@ -1,7 +1,7 @@
 .version.donate /* version checker */
 {
-	color: #0000EC;
-	background-color: #091F95;
+	color: #00000B;
+	background-color: #06F5DD;
 }
 
 #muse_css_mq
@@ -24,7 +24,7 @@
 
 #page_position_content
 {
-	margin-bottom: -6px;
+	margin-bottom: -12px;
 	width: 0.01px;/* should not cover content below */
 }
 
@@ -528,7 +528,7 @@
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 28px;
+	padding-bottom: 34px;
 	margin-top: 73px;
 	position: relative;
 }
@@ -536,12 +536,12 @@
 #u3252-6
 {
 	z-index: 58;
-	width: 622px;
+	width: 782px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 30px;
-	left: 160px;
+	left: 80px;
 }
 
 #u3252-6:hover
@@ -549,7 +549,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 19px;
-	width: 622px;
+	width: 782px;
 	margin: 30px -10000px 0px 0px;
 }
 
