--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #0000EA;
-	background-color: #747853;
+	color: #0000FC;
+	background-color: #8C17BA;
 }
 
 #muse_css_mq
@@ -24,7 +24,7 @@
 
 #page_position_content
 {
-	margin-bottom: -6px;
+	margin-bottom: -12px;
 	width: 0.01px;/* should not cover content below */
 }
 
@@ -1238,19 +1238,19 @@
 {
 	z-index: 3;
 	width: 942px;
-	padding-bottom: 28px;
+	padding-bottom: 34px;
 	position: relative;
 }
 
 #u3252-6
 {
 	z-index: 58;
-	width: 622px;
+	width: 782px;
 	min-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 30px;
-	left: 160px;
+	left: 80px;
 }
 
 #u3252-6:hover
@@ -1258,7 +1258,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 19px;
-	width: 622px;
+	width: 782px;
 	margin: 30px -10000px 0px 0px;
 }
 
