--- a/css/donate.css
+++ b/css/donate.css
@@ -1,7 +1,7 @@
 .version.donate /* version checker */
 {
-	color: #00000B;
-	background-color: #06F5DD;
+	color: #00000C;
+	background-color: #3017F8;
 }
 
 #muse_css_mq
@@ -426,13 +426,13 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#ppu1225-27
+#ppu1225-23
 {
 	width: 0.01px;
 	margin-left: -50px;
 }
 
-#pu1225-27
+#pu1225-23
 {
 	width: 0.01px;
 	margin-right: -10000px;
@@ -440,7 +440,7 @@
 	margin-left: 130px;
 }
 
-#u1225-27
+#u1225-23
 {
 	z-index: 65;
 	width: 782px;
@@ -454,25 +454,25 @@
 	margin-right: -10000px;
 }
 
-#u1225-13
+#u1225-10
 {
 	color: #FF00FF;
 }
 
-#u1225-18
+#u1225-15
 {
 	font-family: bitter, serif;
 	font-weight: 400;
 }
 
-#u1225-2,#u1225-3,#u1225-5,#u1225-6,#u1225-8,#u1225-9,#u1225-11,#u1225-17,#u1225-23,#u1225-25
+#u1225-2,#u1225,#u1225-3,#u1225-5,#u1225-6,#u1225-8,#u1225-14,#u1225-19,#u1225-21
 {
 	color: #9E9E9E;
 }
 
 #u1235
 {
-	z-index: 92;
+	z-index: 88;
 	width: 118px;
 	min-height: 33px;
 	border-width: 0px;
@@ -480,7 +480,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 214px;
+	margin-top: 199px;
 	left: 127px;
 }
 
